--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "graphql-iso-date": "^3.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7",
+    "mongoose-extend-schema": "^1.0.0",
     "mongoose-unique-validator": "^2.0.3",
     "nodemon": "^2.0.4"
   }
